--- a/Dockerfile.external
+++ b/Dockerfile.external
@@ -23,7 +23,8 @@ ENV PORT=8080
 EXPOSE 8080
 
 # Prepare a non-root user
-RUN adduser --system worker
+# RUN adduser --system worker
+RUN adduser --system -u 1000 worker
 WORKDIR /home/worker/app
 
 RUN mkdir local_data; chown worker local_data
