--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,13 +4,27 @@ services:
       dockerfile: Dockerfile.external
     volumes:
       - ./local_data/:/home/worker/app/local_data
+      - ./cache/tiktoken:/home/worker/app/tiktoken_cache
+      - ./cache/models:/home/worker/app/models/cache
     ports:
       - 8001:8080
     environment:
       PORT: 8080
       PGPT_PROFILES: docker
       PGPT_MODE: ollama
+      # HUGGINGFACE_TOKEN: <token>
   ollama:
     image: ollama/ollama:latest
     volumes:
       - ./models:/root/.ollama
+    expose:
+      - 11434
+    ports:
+      - 11434:11434
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [ gpu ]
